--- a/package.json
+++ b/package.json
@@ -5,12 +5,13 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "cy:open":"cypress open",
+    "cy:open": "cypress open",
     "cy:run": "cypress run"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "cypress": "^8.3.0"
+    "cypress": "^8.3.0",
+    "mocha": "^10.0.0"
   }
 }
